--- a/templates/family.html
+++ b/templates/family.html
@@ -4,7 +4,7 @@
     <title>{{page.name}}</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    
     <!--
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ4MzU4Mzc5NDUyMjc3MA%3D%3D.css" rel="stylesheet">    
     <link href="https://fonts.fontdue.com/typetr/css/Rm9udENvbGxlY3Rpb246MTkyMDQ5NDE3NzE2MzU4NjQ4Mw%3D%3D.css" rel="stylesheet">
@@ -283,28 +283,28 @@
         </div>
       </div>
       <div class="container">
-        <div class="column">
+        <div class="column topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
           </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic02.png">
           </div>   
         </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Five master drawings per character</h4>
           <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic03.png">
           </div>
         </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Figures and fractions</h4>
           <p>Upgrade offers a variety of figures and supporting currency symbols for use with capitals, small caps, lowercase characters, and fractions.</p>
           <div class="image-block">
@@ -324,21 +324,21 @@
         </div>
       </div>
       <div class="container">
-        <div class="column">
+        <div class="column topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
           </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic02.png">
           </div>   
         </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Five master drawings per character</h4>
           <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
           <div class="image-block">
@@ -358,14 +358,14 @@
         </div>
       </div>
       <div class="container">
-        <div class="column">
+        <div class="column topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
         </div>
-        <div class="column">
+        <div class="column topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
@@ -424,14 +424,14 @@
         <div class="headerBox">
           <h4>Gerrit Noordzij’s cube</h4>
         </div>     
-        <div class="container">
-          <div class="column">
+        <div class="container-flex">
+          <div class="column-flex">
             <div class="flux">
               <p>Gerrit Noordzij’s cube is based on a merger of expansion contrast (sharp-nib pencil) and translation contrast (broad-nib pencil). The type of contrast used in Upgrade is based on translation, with little difference between vertical thick and horizontal thin strokes. The animation (based on software by Just van Rossum’s Daily Drawbot) shows where the contrast principle of Upgrade is located in Noordzij’s cube. Upgrade styles shown in this example are Light, Book, Regular, Semibold, and Black.</p>
               <p>Depending on the available space of stems and counters in the various weights, some characters have different drawings. There is no room for the vertical bar in the dollar and cent symbols to strike completely through. Note that although all weights are shown here (ranging from Hairline to UltraBlack), details in the extreme weights may not make them ideal candidates for use in this size.</p>
             </div>
           </div>
-          <div class="column">
+          <div class="column-flex">
             <div class="rot">
               <img src="https://upgrade.typenetwork.com/images/NoordzijCube-test-x-1000MMTranspUpgrade.gif">
               <figcaption>Upgrade styles shown in this example are Light, Book, Regular, Semibold, and Black.</figcaption>
@@ -445,8 +445,8 @@
         <div class="headerBox">
           <h4>Different drawings for different weights</h4>
         </div>     
-        <div class="container">
-          <div class="column">
+        <div class="container-flex">
+          <div class="column-flex">
             <div class="flux">
               <p>Depending on the available space of stems and counters in the various weights, some characters have different drawings. There is no room for the vertical bar in the dollar and cent symbols to strike completely through. Note that although all weights are shown here (ranging from Hairline to UltraBlack), details in the extreme weights may not make them ideal candidates for use in this size.</p>
               <h5>More variations to come in the near future</h5>
@@ -455,7 +455,7 @@
               <p>Also planned are variants that cannot easily be expressed in the interpolating axes needed for variable fonts. These variants have a more stylistic approach based on specific usage, where readability is not the first priority. Some projected example names of these non-variable families include Upgrade Round, Upgrade Notouch, Upgrade Logo, Upgrade Ink, and Upgrade Metal.</p>
             </div>
           </div>
-          <div class="column">
+          <div class="column-flex">
             <div class="rot">
               <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png">
               <figcaption>Only a few of Upgrade’s design details, such as the M’s vertex not reaching all the way down to the baseline and the wide N and O, recall humanist sans serifs. The large x-height and open apertures aid legibility in smaller sizes.</figcaption>
@@ -500,9 +500,9 @@
         </div>
       </div>
     </div>
-    <!-- ROW 1 -->
-    <div class="three-colum">  
-      <div class="three-items"> 
+    <!-- ROW 1 -->  
+    <div class="container">
+      <div class="column">
         <div class="tile"> 
           <div class="text-block">
             <h5>CSS ligatures [liga]</h5>
@@ -511,7 +511,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">          
           <div class="text-block">
             <h5>CSS fractions [frac]</h5>
@@ -520,7 +520,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">
           <div class="text-block">          
             <h5>CSS tabular figures [tnum]</h5>
@@ -530,9 +530,10 @@
         </div>
       </div>
     </div>
+    
     <!-- ROW 2 -->
-    <div class="three-colum">  
-      <div class="three-items"> 
+    <div class="container">
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS oldstyle figures [onum]</h5>
@@ -541,7 +542,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS superior figures [sups]</h5>
@@ -550,7 +551,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS inferior figures [sinf]</h5>
@@ -560,9 +561,10 @@
         </div>
       </div>
     </div>
+    
     <!-- ROW 3 -->
-    <div class="three-colum">  
-      <div class="three-items"> 
+    <div class="container">
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS lowercase to small caps [smcp]</h5>
@@ -571,7 +573,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS caps to small caps [c2sc] + [smcp]</h5>
@@ -580,7 +582,7 @@
           </div>
         </div>
       </div>
-      <div class="three-items"> 
+      <div class="column">
         <div class="tile">
           <div class="text-block">
             <h5>CSS slashed zero [zero]</h5>
@@ -591,7 +593,6 @@
       </div>
     </div>
   </div>
-
   <!-- HERO IMAGE SMALL -->
   <div class="block">  
     <section class="hero-image-small">
@@ -604,14 +605,15 @@
     <div class="one-colum">  
       <p class="summary">After releasing a supersized modular bitmap family in 2017, Petr van Blokland raises the bar for sans faces with his first “traditional” type release in nearly two decades.</p>
     </div>
+    <hr>
     <div class="two-colum flex"> 
-      <div class="container">
-        <div class="column">
+      <div class="container-flex">
+        <div class="column-flex">
           <div class="flux">
             <p>Upgrade, the name of TYPETR’s new humanist sans family, reflects the approach designer Petr van Blokland took throughout the design process. He didn’t review visual reference material while crafting his latest release, instead relying on lingering mental images of iconic mid-twentieth century humanist sans serifs to serve as a jumping-off point for Upgrade. Conjuring up form and function in his imagination, Van Blokland set out to create a present-day interpretation that would perform similarly to mid-century models, but with an important difference. He analyzed the core principles of those classic archetypes, implementing certain design concepts while upgrading them to reflect current technical and typographic standards.</p>
           </div>
         </div>
-        <div class="column">
+        <div class="column-flex">
           <div class="rot">
             <img src="https://cms.typenetwork.com/media/original_images/UpgradeExtremes02.svg">
             <figcaption>Upgrade covers an impressive range of weights, from the imposing Ultra Black to the gossamer Hairline.</figcaption>
@@ -621,13 +623,13 @@
     </div>
     <hr>
     <div class="two-colum flex"> 
-      <div class="container">
-        <div class="column">
+      <div class="container-flex">
+        <div class="column-flex">
           <div class="flux">
             <p>Upgrade bears plenty of features that set it apart from other families in the genre. The typeface has its sights firmly set on the future; only a few typical letterforms reference the storied past of the humanist sans model, such as the vertex of an M not reaching all the way down to the baseline, or the wide N and O. These earmarks lend elegance to this multipurpose typeface. The lowercase is dynamic and airy, with open apertures and a generous x-height guaranteeing good legibility at any size. And because they’re not overly narrow, Upgrade’s italics look contemporary and are in balance with the upright styles. If one were to map it to the teachings of the legendary Gerrit Noordzij, Upgrade would situate itself on the bottom line of the Noordzij Cube: it’s a forward-looking example of what the master theorized as the low-contrast-translation–sans-serif genre.</p>
           </div>
         </div>
-        <div class="column">
+        <div class="column-flex">
           <div class="rot">
             <img src="https://cms.typenetwork.com/media/original_images/UpgradeHighlights02.svg" class="sticky">
             <figcaption>Only a few of Upgrade’s design details, such as the M’s vertex not reaching all the way down to the baseline and the wide N and O, recall humanist sans serifs. The large x-height and open apertures aid legibility in smaller sizes.</figcaption>
@@ -637,13 +639,13 @@
     </div>
     <hr>
     <div class="two-colum flex"> 
-      <div class="container">
-        <div class="column">
+      <div class="container-flex">
+        <div class="column-flex">
           <div class="flux">
             <p>To achieve Upgrade’s impressive range of weights, from extremely thin to extremely black, Van Blokland went above and beyond the call of duty. While most designers use two or three masters for interpolating and defining the different weights in a type family, he created no less than five. These additional masters served distinct purposes. Most importantly, they made it possible to cover the entire weight spectrum without the specificities of the extremes getting in the way of the intermediary weights. The five masters also allowed Van Blokland to adapt the shapes of difficult glyphs—like the dollar sign, the cent, and the slashed 0—when the weight increase caused counters to overfill.</p>
           </div>
         </div>
-        <div class="column">
+        <div class="column-flex">
           <div class="rot">
             <img src="https://cms.typenetwork.com/media/original_images/UpgradeWeigths03.svg" class="sticky">
             <figcaption>Because the weight transitions at both extremes of the spectrum are defined by separate masters, their quirks don’t affect the medium variants. Character substitutions reduce clogging of complex characters’ counters.</figcaption>
