--- a/templates/family.html
+++ b/templates/family.html
@@ -282,29 +282,29 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="column topic">
+      <div class="container4">
+        <div class="column4 topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
           </div>
-        <div class="column topic">
+        <div class="column4 topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic02.png">
           </div>   
         </div>
-        <div class="column topic">
+        <div class="column4 topic">
           <h4>Five master drawings per character</h4>
           <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic03.png">
           </div>
         </div>
-        <div class="column topic">
+        <div class="column4 topic">
           <h4>Figures and fractions</h4>
           <p>Upgrade offers a variety of figures and supporting currency symbols for use with capitals, small caps, lowercase characters, and fractions.</p>
           <div class="image-block">
@@ -323,22 +323,22 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="column topic">
+      <div class="container3">
+        <div class="column3 topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
           </div>
-        <div class="column topic">
+        <div class="column3 topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic02.png">
           </div>   
         </div>
-        <div class="column topic">
+        <div class="column3 topic">
           <h4>Five master drawings per character</h4>
           <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
           <div class="image-block">
@@ -357,15 +357,15 @@
           </div>
         </div>
       </div>
-      <div class="container">
-        <div class="column topic">
+      <div class="container2">
+        <div class="column2 topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
         </div>
-        <div class="column topic">
+        <div class="column2 topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
@@ -466,23 +466,23 @@
     </div>
 
     <div class="block dark">  
-      <div class="four-colum">  
-        <div class="four-items">
+      <div class="container4">
+        <div class="column4">
             <h3 class="number-header">Aantal Verkopen</h3>
             <div class="number">1,000</div>
             <div class="description">Verkopen</div>
         </div>
-        <div class="four-items">
+        <div class="column4">
             <h3 class="number-header">Aantal Gebruikers</h3>
             <div class="number">500</div>
             <div class="description">Gebruikers</div>
         </div>
-        <div class="four-items">
+        <div class="column4">
             <h3 class="number-header">Aantal Producten</h3>
             <div class="number">300</div>
             <div class="description">Producten</div>
         </div>
-        <div class="four-items">
+        <div class="column4">
             <h3 class="number-header">Aantal Projecten</h3>
             <div class="number">50</div>
             <div class="description">Projecten</div>
@@ -500,98 +500,87 @@
         </div>
       </div>
     </div>
-    <!-- ROW 1 -->  
-    <div class="container">
-      <div class="column">
-        <div class="tile"> 
-          <div class="text-block">
-            <h5>CSS ligatures [liga]</h5>
-            <h6 class="def">file, fjord, flow, loft</h6>
-            <h6 class="liga">file, fjord, flow, loft</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">          
-          <div class="text-block">
-            <h5>CSS fractions [frac]</h5>
-            <h6 class="def">1/2 1/3 1/4 1/5 234/567</h6>
-            <h6 class="frac">1/2 1/3 1/4 1/5 234/567</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">          
-            <h5>CSS tabular figures [tnum]</h5>
-            <h6 class="def">0123456789</h6>
-            <h6 class="tnum">0123456789</h6>
-          </div>
-        </div>
+ <div class="container3">
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS ligatures [liga]</h5>
+        <h6 class="def">file, fjord, flow, loft</h6>
+        <h6 class="liga">file, fjord, flow, loft</h6>
       </div>
     </div>
-    
-    <!-- ROW 2 -->
-    <div class="container">
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS oldstyle figures [onum]</h5>
-            <h6 class="def">0123456789</h6>
-            <h6 class="onum">0123456789</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS superior figures [sups]</h5>
-            <h6 class="def">0123456789</h6>
-            <h6 class="sups">0123456789</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS inferior figures [sinf]</h5>
-            <h6 class="def">0123456789</h6>
-            <h6 class="sinf">0123456789</h6>
-          </div>
-        </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS fractions [frac]</h5>
+        <h6 class="def">1/2 1/3 1/4 1/5 234/567</h6>
+        <h6 class="frag">1/2 1/3 1/4 1/5 234/567</h6>
       </div>
     </div>
-    
-    <!-- ROW 3 -->
-    <div class="container">
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS lowercase to small caps [smcp]</h5>
-            <h6 class="def">Design is detail management</h6>
-            <h6 class="smcp">Design is detail management</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS caps to small caps [c2sc] + [smcp]</h5>
-            <h6 class="def">Design is detail management</h6>
-            <h6 class="c2sc smcp">Design is detail management</h6>
-          </div>
-        </div>
-      </div>
-      <div class="column">
-        <div class="tile">
-          <div class="text-block">
-            <h5>CSS slashed zero [zero]</h5>
-            <h6 class="def">€ 12.000.000</h6>
-            <h6 class="zero">€ 12.000.000</h6>
-          </div>
-        </div>
+    <div class="column3">
+      <div class="tile">            
+        <h5>CSS tabular figures [tnum]</h5>
+        <h6 class="def">0123456789</h6>
+        <h6 class="tnum">0123456789</h6>
       </div>
     </div>
+    <div class="column3">
+       <div class="tile">      
+        <h5>CSS oldstyle figures [onum]</h5>
+        <h6 class="def">0123456789</h6>
+        <h6 class="onum">0123456789</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS superior figures [sups]</h5>
+        <h6 class="def">0123456789</h6>
+        <h6 class="sups">0123456789</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS inferior figures [sinf]</h5>
+        <h6 class="def">0123456789</h6>
+        <h6 class="sinf">0123456789</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS lowercase to small caps [smcp]</h5>
+        <h6 class="def">Design is detail management</h6>
+        <h6 class="smcp">Design is detail management</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS caps to small caps [c2sc] + [smcp]</h5>
+        <h6 class="def">Design is detail management</h6>
+        <h6 class="c2sc smcp">Design is detail management</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS slashed zero [zero]</h5>
+        <h6 class="def">€ 12.000.000</h6>
+        <h6 class="zero">€ 12.000.000</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS caps to small caps [c2sc] + [smcp]</h5>
+        <h6 class="def">Design is detail management</h6>
+        <h6 class="c2sc smcp">Design is detail management</h6>
+      </div>
+    </div>
+    <div class="column3">
+      <div class="tile">      
+        <h5>CSS slashed zero [zero]</h5>
+        <h6 class="def">€ 12.000.000</h6>
+        <h6 class="zero">€ 12.000.000</h6>
+      </div>
+    </div>
+    <div class="column3">
+    </div>
+  </div>
   </div>
   <!-- HERO IMAGE SMALL -->
   <div class="block">  
