--- a/templates/family.html
+++ b/templates/family.html
@@ -324,21 +324,21 @@
         </div>
       </div>
       <div class="container3">
-        <div class="column3 topic">
+        <div class="column3m topic">
           <h4>Wide range of weights</h4>
           <p>Because Upgrade is destined for complex, heavy-duty typography, an extremely broad range of weights is available, from Hairline to Ultra Black.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic01.gif" >
           </div>   
           </div>
-        <div class="column3 topic">
+        <div class="column3m topic">
           <h4>Extended glyph set</h4>
           <p>Upgrade includes an extended glyph set supported by a number of stylistic feature options, such as small caps, inferior and superior figures, an inline capital J, and an alternate g.</p>
           <div class="image-block">
             <img src="https://upgrade.typenetwork.com/images/pic02.png">
           </div>   
         </div>
-        <div class="column3 topic">
+        <div class="column3m topic">
           <h4>Five master drawings per character</h4>
           <p>Different weights of a typeface are often made by interpolating two or three master drawings per character. Upgrade is made from five original drawings.</p>
           <div class="image-block">
@@ -465,28 +465,28 @@
       </div>
     </div>
 
-    <div class="block dark">  
-      <div class="container4">
-        <div class="column4">
-            <h3 class="number-header">Aantal Verkopen</h3>
-            <div class="number">1,000</div>
-            <div class="description">Verkopen</div>
-        </div>
-        <div class="column4">
-            <h3 class="number-header">Aantal Gebruikers</h3>
-            <div class="number">500</div>
-            <div class="description">Gebruikers</div>
-        </div>
-        <div class="column4">
-            <h3 class="number-header">Aantal Producten</h3>
-            <div class="number">300</div>
-            <div class="description">Producten</div>
-        </div>
-        <div class="column4">
-            <h3 class="number-header">Aantal Projecten</h3>
-            <div class="number">50</div>
-            <div class="description">Projecten</div>
-        </div>
+  <div class="block dark">  
+     <div class="container4">
+      <div class="column4">
+        <h3 class="number-header">Aantal Verkopen</h3>
+        <div class="number">1,000</div>
+        <div class="description">Verkopen</div>
+      </div>
+      <div class="column4">
+        <h3 class="number-header">Aantal Gebruikers</h3>
+        <div class="number">500</div>
+        <div class="description">Gebruikers</div>
+      </div>
+      <div class="column4">
+        <h3 class="number-header">Aantal Producten</h3>
+        <div class="number">300</div>
+        <div class="description">Producten</div>
+      </div>
+      <div class="column4">
+        <h3 class="number-header">Aantal Projecten</h3>
+        <div class="number">50</div>
+        <div class="description">Projecten</div>
+      </div>
     </div>
   </div>
 
